shard-operator/src/main/resources/templates/bridge-executor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ""
  labels:
    app.kubernetes.io/managed-by: bridge-fleet-shard-operator # used for filtering of Deployments created by the controller
    app.kubernetes.io/created-by: bridge-fleet-shard-operator # Specify the operator
    app.kubernetes.io/component: executor # used to specify the component
  ownerReferences: # used for finding which Processor does this Deployment belong to
    - apiVersion: ""
      kind: ""
      name: ""
      uid: ""
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: ""
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ""
    spec:
      containers:
        - name: ""
          image: ""
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: processor-definition
              mountPath: /config
      volumes:
        - name: processor-definition
          configMap:
            # Provide the name of the ConfigMap containing the processor.json definition
            name: ""
