shard-operator/src/main/resources/templates/bridge-ingress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ""
  labels:
    app.kubernetes.io/managed-by: bridge-fleet-shard-operator # used for filtering of Deployments created by the controller
    app.kubernetes.io/created-by: bridge-fleet-shard-operator # Specify the operator
    app.kubernetes.io/component: ingress # used to specify the component
  ownerReferences: # used for finding which BridgeIngress/Processor does this Deployment belong to
    - apiVersion: ""
      kind: ""
      name: ""
      uid: ""
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: ""
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ""
    spec:
      containers:
        - name: ""
          image: ""
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
