shard-operator/src/main/resources/templates/bridge-executor-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ""
  labels:
    app.kubernetes.io/managed-by: bridge-fleet-shard-operator-knative # used for filtering of Deployments created by the controller
    app.kubernetes.io/created-by: bridge-fleet-shard-operator-knative # Specify the operator
    app.kubernetes.io/component: executor # used to specify the component
  ownerReferences: # used for finding which Processor does this Deployment belong to
    - apiVersion: ""
      kind: ""
      name: ""
      uid: ""
spec:
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app.kubernetes.io/instance: ""
