shard-operator/src/main/resources/templates/bridge-ingress-kubernetes-ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ""
  namespace: ""
  labels:
    app.kubernetes.io/managed-by: bridge-fleet-shard-operator # used for filtering of Deployments created by the controller
    app.kubernetes.io/created-by: bridge-fleet-shard-operator # Specify the operator
    app.kubernetes.io/component: ingress # used to specify the component
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  ownerReferences: # used for finding which BridgeIngress/Processor does this Deployment belong to
    - apiVersion: ""
      kind: ""
      name: ""
      uid: ""
spec:
  rules:
    - http:
        paths:
          - path: ""
            pathType: Prefix
            backend:
              serviceName: ""
              servicePort: ""
