shard-operator/src/main/resources/templates/virtual-service-kafka-broker.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ""
spec:
  gateways:
    - ""
  hosts:
    - '*'
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kafka-broker-ingress
            port:
              number: 80
