shard-operator/src/main/resources/templates/bridge-ingress-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  labels:
    app.kubernetes.io/managed-by: bridge-fleet-shard-operator-knative # used for filtering of Deployments created by the controller
    app.kubernetes.io/created-by: bridge-fleet-shard-operator-knative # Specify the operator
    app.kubernetes.io/component: ingress # used to specify the component
  ownerReferences: # used for finding which Processor does this Deployment belong to
    - apiVersion: ""
      kind: ""
      name: ""
      uid: ""
  name: ""
  namespace: istio-system
spec:
  action: ALLOW
  rules:
    - to:
        - operation:
            methods:
              - POST
            paths:
              - ""
      when:
        - key: request.auth.claims[account_id] # user
          values:
            - ""                               # customerId
    - to:
        - operation:
            methods:
              - POST
            paths:
              - ""
      when:
        - key: request.auth.claims[rh-user-id] # service account
          values:
            - ""                               # customerId
            - ""                               # webhook technical accountId
